@@ -1627,7 +1627,18 @@ void menuProcDiagAna(uint8_t event)
     lcd_putsn_P( 4*FW, y,PSTR("A1A2A3A4A5A6A7A8")+2*i,2);
     lcd_outhex4( 8*FW, y,anaIn(i));
     if(i<7)  lcd_outdez(17*FW, y, (int32_t)calibratedStick[i]*100/1024);
-    if(i==7) putsVBat(13*FW,y,false,(sub==1 ? INVERS : 0)|PREC1);
+    if(i==7) 
+    {
+      // Create a 2-decimal precision result just for the calibration screen
+#ifdef THBATVOLTS
+      uint16_t vbat100mV = (uint32_t)((abRunningAvg*35 + ab / 4 * g_eeGeneral.vBatCalib)*10) / 512;
+#else
+      uint16_t vbat100mV = (uint32_t)(abRunningAvg + 4 * g_eeGeneral.vBatCalib) * 360 / 512;
+#endif
+      // putsVBat(13*FW,y,false,(sub==1 ? INVERS : 0)|PREC1);
+      lcd_putcAtt(   17*FW, y, 'V', 0);
+      lcd_outdezAtt( 17*FW, y, vbat100mV, (sub==1 ? INVERS : 0)|PREC2);
+    }
   }
   if(sub==1) CHECK_INCDEC_H_GENVAR(event, g_eeGeneral.vBatCalib, -127, 127);
 }
